welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:2: error: not found: value compteur
  compteur = 0
  ^arrayCount9:5: error: not found: value compteur
      compteur = compteur + 1
      ^arrayCount9:8: error: not found: value compteur
  return compteur
         ^